# mcp-memory-server

./: .gitignore  README.md  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  start_server.sh
CLI-Client-Files/: .mcp.json  settings.json
client-examples/: QUICK_START.md  README.md  claude-code-mcp.json  claude-desktop-config.json  dot-mcp.json  gemini-cli-mcp.json  gemini-mcp-config.json  generic-mcp-config.json  setup-claude-code.sh  setup-gemini-cli.sh
config/: README.md  config.example.json  example.business-development.json  example.creative-writing.json  example.research.json
config/domains/: config.business-development.json  config.cooking.json  config.creative-writing.json  config.research.json
docs/: README.md  architecture.md  configuration-wizard-enhanced.md  configuration.md  domain-configuration.md  error-handling.md  memory-deduplication-proposal.md
scripts/: backup_memory.py  cleanup_test_data.py  config_wizard.py  quick_setup.py  start_server.py  validate_config.py  wizard_demo.py
scripts/wizard/: __init__.py  mappers.py  questions.py  templates.py  ui.py  validators.py
src/mcp_memory_server/: __init__.py  main.py
tests/: conftest.py  test_config.json  test_db_setup.py
tests/fixtures/: test_data_generator.py
tests/integration/: test_advanced_dedup.py  test_api_endpoints.py  test_background_maintenance.py  test_deduplication_flow.py  test_document_lifecycle.py  test_permanence_flow.py  test_query_scoring.py  test_semantic_clustering.py  test_server_config.py  test_server_integration.py
tests/performance/: test_ingestion_performance.py  test_memory_stress.py
tests/temp_configs/: shared_test_config.json  test_deduplication_flow_semantic_config.json
tests/unit/: test_basic_functionality.py  (+10 more)
(+53 files in other folders)
